--- a/workloads/free5gc/free5gc-nrf/webui/webui-deployment.yaml
+++ b/workloads/free5gc/free5gc-nrf/webui/webui-deployment.yaml
@@ -2,48 +2,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: free5gc-nrf
+  name: free5gc-webui
   labels:
     app.kubernetes.io/version: "v3.1.1"
     project: free5gc
-    nf: nrf
+    nf: webui
 spec:
   replicas: 1
   selector:
     matchLabels:
       project: free5gc
-      nf: nrf
+      nf: webui
   template:
     metadata:
       labels:
         project: free5gc
-        nf: nrf
+        nf: webui
     spec:
-      initContainers:
-      - name: wait-mongo
-        image: busybox:1.32.0
-        env:
-        - name: DEPENDENCIES
-          value: mongodb:27017
-        command: ["sh", "-c", "until nc -z $DEPENDENCIES; do echo waiting for the MongoDB; sleep 2; done;"]
       containers:
-      - name: nrf
-        image: towards5gs/free5gc-nrf:v3.1.1
+      - name: webui
+        image: towards5gs/free5gc-webui:v3.1.1
         imagePullPolicy: IfNotPresent
-        securityContext:
-            {}
         ports:
-        - containerPort: 8000
-        command: ["./nrf"]
-        args: ["-c", "../config/nrfcfg.yaml"]
-        env: 
-          - name: DB_URI
-            value: mongodb://mongodb/free5gc
+        - containerPort: 5000
+        command: ["./webconsole"]
+        args: ["-c", "../config/webuicfg.yaml"]
+        env:
           - name: GIN_MODE
             value: release
         volumeMounts:
         - mountPath: /free5gc/config/
-          name: nrf-volume
+          name: webui-volume
         resources:
             limits:
               cpu: 100m
@@ -58,8 +47,8 @@ spec:
           failureThreshold:  40
           successThreshold: 1
           httpGet:
-            scheme: "HTTP"
-            port: 8000
+            scheme: HTTP
+            port: 5000
         livenessProbe:
           initialDelaySeconds: 120
           periodSeconds: 10
@@ -67,14 +56,14 @@ spec:
           failureThreshold: 3
           successThreshold: 1
           httpGet:
-            scheme: "HTTP"
-            port: 8000
+            scheme: HTTP
+            port: 5000
       dnsPolicy: ClusterFirst
       restartPolicy: Always
 
       volumes:
-      - name: nrf-volume
+      - name: webui-volume
         projected:
           sources:
           - configMap:
-              name: nrf-configmap
+              name: webui-configmap
